@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 0.11.0 - unreleased
 
+  MAHOUT-1693: FunctionalMatrixView materializes row vectors in scala shell (apalumbo)
+
   MAHOUT-1680: Renamed mahout-distribution to apache-mahout-distribution
 
 Release 0.10.0 - 2015-04-11
